Added logout handler
