# internal/controller/rest/v1/auth.go
@@ -24,6 +24,7 @@ func NewAuthRoutes(log *slog.Logger, handler *gin.RouterGroup, s authv1.AuthClie
 	{
 		g.POST("/register", r.register)
 		g.POST("/login", r.login)
+		g.POST("/logout", r.logout)
 	}
 }
 
@@ -94,6 +95,44 @@ func (r *authRoutes) login(c *gin.Context) {
 	}
 
 	resp, err := r.s.Login(c.Request.Context(), req.ToGRPC())
+	if err != nil {
+		code, err := common.GetProtoErrWithStatusCode(err)
+		log.Error(err.Error())
+		c.JSON(code, gin.H{"error": err.Error()})
+		return
+	}
+
+	c.JSON(http.StatusOK, resp)
+}
+
+// @Summary     Logout
+// @Description Logout
+// @ID          Logout
+// @Tags  	    Auth
+// @Accept      json
+// @Param 		logout body entities.LogoutRequest false "logout"
+// @Produce     json
+// @Success     200 {object} authv1.LogoutResponse
+// @Failure     400
+// @Failure     404
+// @Failure     500
+// @Failure     503
+// @Router      /auth/logout [post]
+func (r *authRoutes) logout(c *gin.Context) {
+	const op = "authRoutes.logout"
+
+	log := r.log.With(
+		slog.String("op", op),
+	)
+
+	var req *entities.LogoutRequest
+	if err := c.ShouldBindJSON(&req); err != nil {
+		log.Error(err.Error())
+		c.JSON(http.StatusBadRequest, gin.H{"error": common.GetErrMessages(err).Error()})
+		return
+	}
+
+	resp, err := r.s.Logout(c.Request.Context(), req.ToGRPC())
 	if err != nil {
 		code, err := common.GetProtoErrWithStatusCode(err)
 		log.Error(err.Error())
